Bug 719518 - Selection.extend() with no ranges should throw standard exception type; r=ehsan